<resources>
    <string name="app_name">MiniStockbit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_notification">Notification</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="text_watchlist">Watchlist</string>
    <string name="text_stream">Stream</string>
    <string name="text_search">Search</string>
    <string name="text_chat">Chat</string>
    <string name="text_Portofolio">Portofolio</string>
    <string name="text_splash">Splash</string>
    <string name="text_login">Login</string>
    <string name="text_stockbit">Stockbit</string>

    <string name="text_login_with_google">Masuk dengan Google</string>
    <string name="text_login_with_facebook">Masuk dengan Facebook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_more">MORE</string>
    <string name="text_social">SOCIAL</string>
    <string name="text_trade">TRADE</string>
    <string name="text_sign_up_button">Belum punya akun? Daftar sekarang</string>
    <string name="text_toast_fingerprint_button">button login with fingerprint</string>
    <string name="text_toast_forget_password_button">button forget password</string>
    <string name="text_toast_google_button">button login google</string>
    <string name="text_toast_facebook_button">button login facebook</string>
    <string name="text_toast_sign_up_button">button  Sign Up</string>
    <string name="on_error">Terjadi Kesalahan...</string>
    <string name="text_masuk">Masuk</string>
    <string name="stream_btc">BTC</string>
    <string name="stream_bitcoin">Bitcoin</string>
    <string name="stream_coinbase">Coinbase</string>
    <string name="stream_ltc">LTC</string>
    <string name="stream_litecoin">Litecoin</string>


</resources>