<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_trade"
            android:title="@string/text_trade">
                <menu>
                    <item
                        android:id="@+id/nav_watchlist"
                        android:icon="@drawable/ic_watchlist"
                        android:title="@string/text_watchlist"
                        />
                    <item
                        android:id="@+id/nav_portofolio"
                        android:icon="@drawable/ic_portofolio"
                        android:title="@string/text_Portofolio" />
                </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_social"
            android:title="@string/text_social">
            <menu>
                <item
                    android:id="@+id/nav_stream"
                    android:icon="@drawable/ic_stream"
                    android:title="@string/text_stream" />

                <item
                    android:id="@+id/nav_chat"
                    android:icon="@drawable/ic_chat"
                    android:title="@string/text_chat" />
            </menu>
        </item>
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_more"
            android:title="@string/text_more">
            <menu>
                <item
                    android:id="@+id/nav_search"
                    android:icon="@drawable/ic_search"
                    android:title="@string/text_search" />
            </menu>
        </item>
    </group>

</menu>