<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.login.LoginFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_google"
        style="@style/stockBitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingVertical="12dp"
        android:text="@string/text_login_with_google"
        app:icon="@drawable/ic_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_facebook"
        style="@style/stockBitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:paddingStart="14dp"
        android:text="@string/text_login_with_facebook"
        app:icon="@drawable/ic_facebook_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_google" />


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="44dp"
        android:background="@color/abu_stockbit"
        app:layout_constraintEnd_toStartOf="@id/text_atau"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_facebook" />


    <TextView
        android:id="@+id/text_atau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="Atau"
        android:textColor="@color/abu_stockbit"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_facebook" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="44dp"
        android:background="@color/abu_stockbit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_atau"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_facebook" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="Username or Email"
        app:hintTextColor="@color/green_stockbit"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/green_stockbit"
        app:layout_constraintTop_toBottomOf="@+id/text_atau"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Password"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/green_stockbit"
        app:hintTextColor="@color/green_stockbit"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/textField_username"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/textButton_forget_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Lupa Password"
        android:textAllCaps="false"
        android:textColor="@color/green_stockbit"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField" />

    <com.google.android.material.button.MaterialButton
        android:paddingVertical="12dp"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green_stockbit"
        android:text="@string/text_login"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/textButton_forget_password"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finger_print"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingVertical="12dp"
        android:text="Masuk dengan Fingerprint"
        android:textColor="@color/green_stockbit"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:strokeColor="@color/green_stockbit"
        tools:layout_editor_absoluteX="16dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/textButton_signin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="Belum punya akun? Daftar sekarang"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_finger_print" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>